fix(cards): reduced the overflow of cards in small device by reducing width

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -77,8 +77,8 @@ code {
   border-top-left-radius: 0rem;
   cursor: pointer;
 }
-.wd-30-r {
-  width: 30rem;
+.wd-25-r {
+  width: 25rem;
 }
 .wd-100-per {
   width: 100%;
